app/tools/nodered/nodered-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodered
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 1880
  selector:
    app: nodered
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
