app/tools/nodered/nodered-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Dynamically Detected
    gethomepage.dev/group: Media
    gethomepage.dev/icon: nodered.svg
    gethomepage.dev/name: Nodered
  name: nodered
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
  - host: nodered.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: nodered
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nodered.home.adaminformatika.hu
    secretName: nodered.home.adaminformatika.hu
